--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 <body>
   <div class="container">
     
-      <img src="../images/image-product-desktop.jpg"
+      <img src="images/image-product-desktop.jpg"
            alt="image du Parfum"
            width="600px" height="900px"
-           srcset="../images/image-product-desktop.jpg 600w,
-                   ../images/image-product-mobile.jpg 686w"
+           srcset="images/image-product-desktop.jpg 600w,
+                   images/image-product-mobile.jpg 686w"
            sizes="(min-width: 480px) 300px,
                   (max-width: 375px) 700px">
            
